Finalização das páginas de cada tópico, links e imagens.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 									<h2>World Flipper</h2>
 									<p>World Flipper é um jogo de RPG com combate no estilo de Pinball, com vários estilos de combate e gráficos pixelados mas muito vivos. </p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Ver mais</a></li>
+										<li><a href="./site/wf.html" class="button">Ver mais</a></li>
 									</ul>
 								</div>
 							</div>
@@ -63,7 +63,7 @@
 									<h2>Fate/Grand Order</h2>
 									<p>Seguindo a enorme franquia Fate, esse RPG de turnos utiliza interessantes variações de figuras históricas em combate.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Ver mais</a></li>
+										<li><a href="./site/fgo.html" class="button">Ver mais</a></li>
 									</ul>
 								</div>
 							</div>
@@ -75,7 +75,7 @@
 									<h2>Genshin Impact</h2>
 									<p>Um enorme RPG de mundo aberto e com muita ação, além de ótimos gráficos e uma boa história.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Ver mais</a></li>
+										<li><a href="./site/gi.html" class="button">Ver mais</a></li>
 									</ul>
 								</div>
 							</div>
@@ -86,42 +86,39 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Outras opções</h2>
-							<p>Se você não gostou de nenhum dos jogos acima, pode considerar esses:</p>
+							<p>Se você não gostou de nenhum dos jogos acima, veja algum desses próximos jogos e acesse a sua página clicando no seu nome.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h3>Fire Emblem Heroes</h3>
+									<h3><a href="https://play.google.com/store/apps/details?id=com.nintendo.zaba">Fire Emblem Heroes</a></h3>
 									<p>Se você gosta de RPGs táticos, talvez ache interessante a série de jogos Fire Emblem.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
-									<h3>The Alchemist Code</h3>
+									<h3><a href="https://play.google.com/store/apps/details?id=sg.gumi.alchemistww">The Alchemist Code</a></h3>
 									<p>Outro RPG tático, porém com diversas opções de combates e construção de equipe.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>Grand Summoners</h3>
+									<h3><a href="https://play.google.com/store/apps/details?id=jp.goodsmile.grandsummonersglobal_android">Grand Summoners</a></h3>
 									<p>Um RPG com estilo de pixel art, várias colaborações com animes e uma ótima trilha sonora.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
-									<h3>KoF ALLSTAR</h3>
+									<h3><a href="https://play.google.com/store/apps/details?id=com.netmarble.kofg">KoF ALLSTAR</a></h3>
 									<p>Caso você goste de jogos de luta e os personagens da SNK, vale a pena tentar esse jogo.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-link"></span>
-									<h3>Pokemon Masters EX</h3>
+									<h3><a href="https://play.google.com/store/apps/details?id=com.dena.a12026418">Pokemon Masters EX</a></h3>
 									<p>Um RPG mobile de Pokémon, introduzindo novos personagens e trazendo devolta outros personagens conhecidos.</p>
 								</section>
 								<section>
 									<span class="icon major fa-gem"></span>
-									<h3>Arknights</h3>
+									<h3><a href="https://play.google.com/store/apps/details?id=com.YoStarEN.Arknights">Arknights</a></h3>
 									<p>RPG tático, dessa vez no estilo tower defense, posicionando suas tropas para defender-se contra ondas de inimigos</p>
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul>
 						</div>
 					</section>
 
@@ -148,7 +145,7 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">Enviar</a></li>
+											<li><a href="#" onclick="alert('Obrigado pela colaboração!')" class="button submit">Enviar</a></li>
 										</ul>
 									</form>
 								</section>
@@ -166,8 +163,7 @@
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://github.com/marconekc/Projeto-Coding" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 											</ul>
 										</li>
 									</ul>
