--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="#" onclick="alert('Obrigado pela colaboração!')" class="button submit">Enviar</a></li>
+											<li><a onclick="alert('Obrigado pela colaboração!')" class="button">Enviar</a></li>
 										</ul>
 									</form>
 								</section>
@@ -158,7 +158,7 @@
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">marconekcsantana@fac.pe.senac.br</a>
+											<a>marconekcsantana@fac.pe.senac.br</a>
 										</li>
 										<li>
 											<h3>Social</h3>
