Melhoria nas métricas de performance, acessibilidade e SEO

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="pt-BR">
 	<head>
 		<title>Top 3 Gachas de 2023</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Uma lista feita com base em opiniões sobre os melhores gachas em 2023, feita por Marcone Kaike como um projeto de coding.">
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -45,7 +46,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a class="image"><img src="images/imgWF.jpg" alt="" data-position="center center" /></a>
+							<a class="image" href="/images/imgWF.webp"><img src="/images/imgWF.webp" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>World Flipper</h2>
@@ -57,7 +58,7 @@
 							</div>
 						</section>
 						<section>
-							<a class="image"><img src="images/imgFGO.jpg" alt="" data-position="top center" /></a>
+							<a class="image"  href="/images/imgFGO.webp"><img src="/images/imgFGO.webp" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Fate/Grand Order</h2>
@@ -69,7 +70,7 @@
 							</div>
 						</section>
 						<section>
-							<a class="image"><img src="images/imgGI.jpg" alt="" data-position="25% 25%" /></a>
+							<a class="image"  href="/images/imgGI.webp"><img src="/images/imgGI.webp" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Genshin Impact</h2>
@@ -158,12 +159,12 @@
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a>marconekcsantana@fac.pe.senac.br</a>
+											<a href="mailto:marconekcsantana@fac.pe.senac.br">marconekcsantana@fac.pe.senac.br</a>
 										</li>
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="https://github.com/marconekc/Projeto-Coding" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://github.com/marconekc/Projeto-Coding" alt="github link" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 											</ul>
 										</li>
 									</ul>
