Remoção de imagens placeholder, adição de alt text nas imagens.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a class="image" href="/images/imgWF.webp"><img src="/images/imgWF.webp" alt="" data-position="center center" /></a>
+							<a class="image" href="/images/imgWF.webp"><img src="/images/imgWF.webp" alt="imagem do jogo world flipper" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>World Flipper</h2>
@@ -58,7 +58,7 @@
 							</div>
 						</section>
 						<section>
-							<a class="image"  href="/images/imgFGO.webp"><img src="/images/imgFGO.webp" alt="" data-position="top center" /></a>
+							<a class="image"  href="/images/imgFGO.webp"><img src="/images/imgFGO.webp" alt="imagem do jogo fate grand order" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Fate/Grand Order</h2>
@@ -70,7 +70,7 @@
 							</div>
 						</section>
 						<section>
-							<a class="image"  href="/images/imgGI.webp"><img src="/images/imgGI.webp" alt="" data-position="25% 25%" /></a>
+							<a class="image"  href="/images/imgGI.webp"><img src="/images/imgGI.webp" alt="imagem do jogo genshin impact" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Genshin Impact</h2>
@@ -164,7 +164,7 @@
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="https://github.com/marconekc/Projeto-Coding" alt="github link" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://github.com/marconekc/Projeto-Coding" alt="icone e link do github" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 											</ul>
 										</li>
 									</ul>
