--- a/site/fgo.html
+++ b/site/fgo.html
@@ -31,7 +31,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Fate/Grand Order</h1>
-							<span class="image fit"><img src="../images/imgFGOL.webp" alt="" /></span>
+							<span class="image fit"><img src="../images/imgFGOL.webp" alt="imagem do jogo fate grand order" /></span>
 							<p>Fate/Grand Order, popularmente chamado de FGO, é um RPG baseado em combates por turnos onde sua equipe pode combinar estilos de ataques para receber efeitos especiais, utilizar itens e habilidades especiais para atacar, defender ou fortalecer os aliados. <br> Possuíndo uma enorme história para completar e recebendo frequentemente novos eventos, há muito conteúdo no jogo para ser feito.</p>
 							<p>A história principal do jogo se baseia no jogador assumir o papel de um "mestre" que convoca "servos", que são figuras históricas e mitológicas, porém com personalidades e visuais muito diferentes, e com esses aliados viajar no tempo para proteger a história da humanidade de diversas ameaças.</p>
 							<p>Você pode experimentar Fate/Grand Order clicando <a href="https://play.google.com/store/apps/details?id=com.aniplex.fategrandorder.en" style="font-weight:bold">Aqui!</a></p>
