--- a/site/gi.html
+++ b/site/gi.html
@@ -31,7 +31,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Genshin Impact</h1>
-							<span class="image fit"><img src="../images/imgGIL.webp" alt="" /></span>
+							<span class="image fit"><img src="../images/imgGIL.webp" alt="imagem do jogo genshin impact" /></span>
 							<p>Genshin Impact é um enorme RPG de mundo aberto, com um bom foco em coleta de recursos e exploração e um sistema de combate muito versátil, limitando apenas à quantidade de habilidades e golpes de cada personagem. Com gráficos e elementos que lembram jogos mais recentes de franquias como Zelda ou Final Fantasy, as paisagens do jogo são incríveis, além de ter uma ótima trilha sonora para acompanhar.</p>
 							<p>A história do jogo é focada em 2 personagens (Aether e Lumine), que exploram diversos mundos, mas foram parados por um ser desconhecido, e então o irmão ou a irmã (dependendo do protagonista escolhido) é capturado por esse ser e nosso protagonista é jogado na terra de Teyvat, onde ele tem o objetivo principal de se reunir devolta e eventualmente sair desse mundo.</p>
 							<p>Você pode experimentar Genshin Impact clicando <a href="https://play.google.com/store/apps/details?id=com.miHoYo.GenshinImpact" style="font-weight:bold">Aqui!</a></p>
