Restaurando icones removidos e corrigindo alt texts.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a class="image" href="/images/imgWF.webp"><img src="/images/imgWF.webp" alt="imagem do jogo world flipper" data-position="center center" /></a>
+							<a class="image" href="/images/imgWF.webp" alt="imagem do jogo world flipper"><img src="/images/imgWF.webp" alt="imagem do jogo world flipper" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>World Flipper</h2>
@@ -58,7 +58,7 @@
 							</div>
 						</section>
 						<section>
-							<a class="image"  href="/images/imgFGO.webp"><img src="/images/imgFGO.webp" alt="imagem do jogo fate grand order" data-position="top center" /></a>
+							<a class="image"  href="/images/imgFGO.webp" alt="imagem do jogo fate grand order"><img src="/images/imgFGO.webp" alt="imagem do jogo fate grand order" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Fate/Grand Order</h2>
@@ -70,7 +70,7 @@
 							</div>
 						</section>
 						<section>
-							<a class="image"  href="/images/imgGI.webp"><img src="/images/imgGI.webp" alt="imagem do jogo genshin impact" data-position="25% 25%" /></a>
+							<a class="image"  href="/images/imgGI.webp" alt="imagem do jogo genshin impact"><img src="/images/imgGI.webp" alt="imagem do jogo genshin impact" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Genshin Impact</h2>
@@ -90,33 +90,33 @@
 							<p>Se você não gostou de nenhum dos jogos acima, veja algum desses próximos jogos e acesse a sua página clicando no seu nome.</p>
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-code"></span>
-									<h3><a href="https://play.google.com/store/apps/details?id=com.nintendo.zaba">Fire Emblem Heroes</a></h3>
+									<span class="icon solid major fa-shield-alt"></span>
+									<h3><a href="https://play.google.com/store/apps/details?id=com.nintendo.zaba" alt="link do jogo fire emblem">Fire Emblem Heroes</a></h3>
 									<p>Se você gosta de RPGs táticos, talvez ache interessante a série de jogos Fire Emblem.</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-lock"></span>
-									<h3><a href="https://play.google.com/store/apps/details?id=sg.gumi.alchemistww">The Alchemist Code</a></h3>
+									<span class="icon solid major fa-magic"></span>
+									<h3><a href="https://play.google.com/store/apps/details?id=sg.gumi.alchemistww" alt="link do jogo the alchemist code">The Alchemist Code</a></h3>
 									<p>Outro RPG tático, porém com diversas opções de combates e construção de equipe.</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-cog"></span>
-									<h3><a href="https://play.google.com/store/apps/details?id=jp.goodsmile.grandsummonersglobal_android">Grand Summoners</a></h3>
+									<span class="icon solid major fa-crown"></span>
+									<h3><a href="https://play.google.com/store/apps/details?id=jp.goodsmile.grandsummonersglobal_android" alt="link do jogo grand summoners">Grand Summoners</a></h3>
 									<p>Um RPG com estilo de pixel art, várias colaborações com animes e uma ótima trilha sonora.</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-desktop"></span>
-									<h3><a href="https://play.google.com/store/apps/details?id=com.netmarble.kofg">KoF ALLSTAR</a></h3>
+									<span class="icon solid major fa-hand-rock"></span>
+									<h3><a href="https://play.google.com/store/apps/details?id=com.netmarble.kofg" alt="link do jogo king of fighters allstar">KoF ALLSTAR</a></h3>
 									<p>Caso você goste de jogos de luta e os personagens da SNK, vale a pena tentar esse jogo.</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-link"></span>
-									<h3><a href="https://play.google.com/store/apps/details?id=com.dena.a12026418">Pokemon Masters EX</a></h3>
+									<span class="icon solid major fa-dice-six"></span>
+									<h3><a href="https://play.google.com/store/apps/details?id=com.dena.a12026418" alt="link do jogo pokemon masters ex">Pokemon Masters EX</a></h3>
 									<p>Um RPG mobile de Pokémon, introduzindo novos personagens e trazendo devolta outros personagens conhecidos.</p>
 								</section>
 								<section>
-									<span class="icon major fa-gem"></span>
-									<h3><a href="https://play.google.com/store/apps/details?id=com.YoStarEN.Arknights">Arknights</a></h3>
+									<span class="icon solid major fa-helicopter"></span>
+									<h3><a href="https://play.google.com/store/apps/details?id=com.YoStarEN.Arknights" alt="link do jogo arknights">Arknights</a></h3>
 									<p>RPG tático, dessa vez no estilo tower defense, posicionando suas tropas para defender-se contra ondas de inimigos</p>
 								</section>
 							</div>
@@ -164,7 +164,7 @@
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="https://github.com/marconekc/Projeto-Coding" alt="icone e link do github" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li alt="icone e link do github"><a href="https://github.com/marconekc/Projeto-Coding" alt="icone e link do github" class="icon brands fa-github"><span class="label" alt="icone e link do github">GitHub</span></a></li>
 											</ul>
 										</li>
 									</ul>
