--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		
+		<link rel="manifest" href="manifest.json">
+		<meta name="mobile-web-app-capable" content="yes">
+		<meta name="msapplication-Tile-Image" content="assets/img/icons/icon_144.png">
+		<meta name="msapplication-TileColor" content="#5e42a6">
+		<meta name="theme-color" content="#312450" />
+		<link rel="shortcut icon" sizes="192x192" href="assets/img/icons/icon_192.png">
+		<link rel="shortcut icon" sizes="128x128" href="assets/img/icons/icon_128.png">
+
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<meta name="apple-mobile-web-app-title" content="Lista Gachas">
+		<link rel="apple-touch-icon" href="assets/img/icons/icon_144.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="assets/img/icons/icon_152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="assets/img/icons/icon_180.png">
+		<link rel="apple-touch-icon" sizes="167x167" href="assets/img/icons/icon_167.png">
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+
+		<link rel="icon" type="image/png" href="assets/img/icons/icon_144.png">
+
 	</head>
 	<body class="is-preload">
 
@@ -46,7 +66,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a class="image" href="/images/imgWF.webp" alt="imagem do jogo world flipper"><img src="/images/imgWF.webp" alt="imagem do jogo world flipper" data-position="center center" /></a>
+							<a class="image" href="/assets/img/imgWF.webp" alt="imagem do jogo world flipper"><img src="/assets/img/imgWF.webp" alt="imagem do jogo world flipper" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>World Flipper</h2>
@@ -58,7 +78,7 @@
 							</div>
 						</section>
 						<section>
-							<a class="image"  href="/images/imgFGO.webp" alt="imagem do jogo fate grand order"><img src="/images/imgFGO.webp" alt="imagem do jogo fate grand order" data-position="top center" /></a>
+							<a class="image"  href="/assets/img/imgFGO.webp" alt="imagem do jogo fate grand order"><img src="/assets/img/imgFGO.webp" alt="imagem do jogo fate grand order" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Fate/Grand Order</h2>
@@ -70,7 +90,7 @@
 							</div>
 						</section>
 						<section>
-							<a class="image"  href="/images/imgGI.webp" alt="imagem do jogo genshin impact"><img src="/images/imgGI.webp" alt="imagem do jogo genshin impact" data-position="25% 25%" /></a>
+							<a class="image"  href="/assets/img/imgGI.webp" alt="imagem do jogo genshin impact"><img src="/assets/img/imgGI.webp" alt="imagem do jogo genshin impact" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Genshin Impact</h2>
