--- a/index.html
+++ b/index.html
@@ -203,8 +203,46 @@
 					</ul>
 				</div>
 			</footer>
+			<div id="snackbar">Uma nova versão está disponível! Clique <a id="reload">AQUI</a> para atualizar.</div>
 
 		<!-- Scripts -->
+		<script>
+			let newWorker;
+			function showUpdateBar() {
+			  let snackbar = document.getElementById('snackbar');
+			  snackbar.className = 'show';
+			}
+			// The click event on the pop up notification
+			document.getElementById('reload').addEventListener('click', function () {
+			  newWorker.postMessage({ action: 'skipWaiting' });
+			});
+			if ('serviceWorker' in navigator) {
+			  navigator.serviceWorker.register('/service-worker.js').then(reg => {
+				reg.addEventListener('updatefound', () => {
+				  // A wild service worker has appeared in reg.installing!
+				  newWorker = reg.installing;
+				  newWorker.addEventListener('statechange', () => {
+					// Has network.state changed?
+					switch (newWorker.state) {
+					  case 'installed':
+						if (navigator.serviceWorker.controller) {
+						  // new update available
+						  showUpdateBar();
+						}
+						// No update available
+						break;
+					}
+				  });
+				});
+			  });
+			  let refreshing;
+			  navigator.serviceWorker.addEventListener('controllerchange', function () {
+				if (refreshing) return;
+				window.location.reload();
+				refreshing = true;
+			  });
+			}
+		  </script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
