--- a/index.html
+++ b/index.html
@@ -31,6 +31,28 @@
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 
 		<link rel="icon" type="image/png" href="assets/img/icons/icon_144.png">
+		<style>
+			#snackbar {
+			  visibility: hidden;
+			  min-width: 250px;
+			  margin-left: -125px;
+			  background-color: #333;
+			  color: #fff;
+			  text-align: center;
+			  border-radius: 2px;
+			  padding: 16px;
+			  position: fixed;
+			  z-index: 1;
+			  left: 50%;
+			  bottom: 30px;
+			}
+		
+			#snackbar.show {
+			  visibility: visible;
+			  -webkit-animation: fadein 0.5s;
+			  animation: fadein 0.5s;
+			}
+		  </style>
 
 	</head>
 	<body class="is-preload">
